--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://hugo-narrow.vercel.app/
+baseURL: https://avadhoot.pages.dev/
 languageCode: en-US
 defaultContentLanguage: en
 defaultContentLanguageInSubdir: false
