--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-from = "http*://*avadhoot.pages.dev/*"
+from = "https://avadhoot.pages.dev/"
 to = "https://news.avadhoot.me/"
 status = 301
 force = true
