--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,12 @@
-[[redirects]]
-from = "https://avadhoot.pages.dev/"
-to = "https://news.avadhoot.me/"
-status = 301
-force = true
+[build]
+  command = "hugo"
+  publish = "public"
+
+[build.environment]
+  HUGO_VERSION = "0.146.0"
+
+# [[redirects]]
+# from = "https://avadhoot.pages.dev/"
+# to = "https://news.avadhoot.me/"
+# status = 301
+# force = true
