--- a/netlify.toml
+++ b/netlify.toml
@@ -5,8 +5,8 @@
 [build.environment]
   HUGO_VERSION = "0.146.0"
 
-# [[redirects]]
-# from = "https://avadhoot.pages.dev/"
-# to = "https://news.avadhoot.me/"
-# status = 301
-# force = true
+[[redirects]]
+from = "https://hugo-narrow.netlify.app/"
+to = "https://blog.avadhoot.me/"
+status = 301
+force = true
